# stackpit

./: .djlintrc  .dockerignore  .envrc  .gitignore  CAVEATS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  manifest.scm
.claude/skills/e2e-review/: SKILL.md
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml
docs/: checklist-testing.md  operator-guide.md
migrations/postgres/: 001_initial.sql  002_sourcemaps.sql  003_tag_value_indexes.sql  004_api_keys.sql  005_chunk_project_scope.sql  006_auth.sql  008_integrations_url_nullable.sql  009_session_aggregates.sql  010_transactions.sql  011_orgs_members.sql  012_alert_rules_org.sql  013_digest_schedules_org.sql  014_integrations_org.sql
migrations/sqlite/: 001_initial.sql  002_sourcemaps.sql  004_api_keys.sql  005_chunk_project_scope.sql  006_auth.sql  007_user_agent_filter_unique.sql  008_integrations_url_nullable.sql  009_session_aggregates.sql  010_transactions.sql  011_orgs_members.sql  012_alert_rules_org.sql  013_digest_schedules_org.sql  014_integrations_org.sql
scripts/: generate-fake-data.py  test_generate_fake_data.py
scripts/sentry-test-client/: main.py  requirements.txt
scripts/sourcemap-test/: main.py
src/: auth.rs  auth_service.rs  background.rs  config.rs  crypto.rs  domain.rs  encoding.rs  enrich.rs  envelope.rs  event_data.rs  extractors.rs  fingerprint.rs  forge.rs  lib.rs  main.rs  mcp.rs  models.rs  network.rs  oauth.rs  server.rs  sliding_window.rs  sourcemap.rs  ssrf.rs  stats.rs  throttle.rs
src/api/: alerts.rs  events.rs  issues.rs  mod.rs  projects.rs  releases.rs  sourcemaps.rs
src/cli/: backfill.rs  event.rs  events.rs  init.rs  mod.rs  projects.rs  status.rs  tail.rs
src/config/: mod.rs  url.rs  validate.rs
src/db/: migrations.rs  mod.rs  pool.rs
src/endpoints/: auth.rs  envelope.rs  minidump.rs  mod.rs  pipeline.rs  responses.rs  security.rs  store.rs
src/filter/: admin.rs  cidr.rs  data.rs  engine.rs  glob.rs  mod.rs  rate_limit.rs  rules.rs  verdict.rs
src/html/: admin.rs  alerts.rs  auth.rs  browser_defaults.rs  bulk.rs  charts.rs  event_detail.rs  event_list.rs  event_type_list.rs  filters.rs  integrations.rs  issue_detail.rs  issue_list.rs  login.rs  logs.rs  metrics.rs  mod.rs  monitors.rs  new_project.rs  orgs.rs  profiles.rs  project_filters.rs  project_integrations.rs  project_list.rs  project_settings.rs  provision.rs  release_health.rs  release_list.rs  replays.rs  spans.rs  transaction_list.rs  transactions.rs  utils.rs
src/ingest/: auth.rs  enrich.rs  envelope.rs  event_data.rs  fingerprint.rs  mod.rs  models.rs  parse_log.rs  parse_metric.rs  parse_span.rs  sourcemap.rs
src/middleware/: admin_auth.rs  cookie.rs  csrf.rs  mod.rs  rate_limit.rs  web_auth.rs
src/notify/: mod.rs  rate_limit.rs
src/oidc/: client.rs  cookies.rs  grants.rs  login_state.rs  logout.rs  mod.rs  refresh.rs  revocations.rs
src/orgs/: extractor.rs  mod.rs  reconcile.rs
src/providers/: email.rs  mod.rs  slack.rs  webhook.rs
src/queries/: alerts.rs  api_keys.rs  backfill.rs  bulk.rs  client_reports.rs  event_supplements.rs  event_sync.rs  event_writes.rs  events.rs  filters.rs  integrations.rs  issues.rs  logs.rs  metrics.rs  mod.rs  monitors.rs  orgs.rs  parse_log.rs  parse_metric.rs  parse_span.rs  profiles.rs  projects.rs  releases.rs  replays.rs  retention.rs  spans.rs  transactions.rs  types.rs  users.rs
src/sync/: attachments.rs  client.rs  events.rs  issues.rs  mod.rs  releases.rs  state.rs  transform.rs
src/util/: crypto.rs  mod.rs  ssrf.rs  stats.rs  throttle.rs
src/writer/: accumulator.rs  aggregation.rs  alerting.rs  dispatch.rs  flush.rs  handle.rs  mod.rs  msg.rs  types.rs
stackpit-auth/: Cargo.toml
stackpit-auth/src/: admin_token.rs  context.rs  cookie.rs  jwks.rs  lib.rs
stackpit-auth/src/axum_ext/: extractors.rs  mcp.rs  middleware.rs  mod.rs
stackpit-auth/src/bearer/: cache.rs  jwt.rs  mod.rs  opaque.rs
stackpit-auth/src/testdata/: test_jwks.json  test_rsa_priv.der  test_rsa_priv.pem  test_rsa_priv_2.der  test_rsa_pub.pem
static/: bulk.js  confirm.js  stop-propagation.js
templates/: _macros.html  admin_unassigned.html  alerts.html  base.html  browser_defaults.html  client_report_list.html  event_detail.html  event_list.html  integration_new_email.html  integration_new_slack.html  integration_new_webhook.html  integrations.html  invite_accept.html  issue_detail.html  issue_list.html  log_list.html  login.html  metric_detail.html  metric_list.html  monitor_detail.html  monitors.html  new_project.html  org_members.html  orgs.html  profile_detail.html  profile_list.html  project_created.html  project_integrations.html  project_list.html  project_settings.html  project_settings_filters.html  project_settings_keys.html  project_settings_sourcemaps.html  provision.html  release_health.html  release_list.html  replay_detail.html  replay_list.html  span_list.html  style.css  (+5 more)
tests/: README.md  ingestion.rs  integration.rs  migration_parity.rs
tests/e2e/: capture.mjs  package-lock.json  package.json  playwright.config.ts
tests/e2e/helpers/: admin.ts
tests/e2e/tests/smoke/: auth.setup.ts  login.spec.ts  projects.spec.ts  settings.spec.ts
tests/integration/: api.rs  auth.rs  common.rs  ingest.rs  orgs.rs  security.rs  smoke.rs
