[package]
name = "stackpit"
version = "0.3.2"
edition = "2021"
description = "Lightweight, self-hosted error tracking and event monitoring"
authors = ["Franz Geffke <mail@gofranz.com>"]
license = "MIT"
repository = "https://github.com/franzos/stackpit"
homepage = "https://github.com/franzos/stackpit"
keywords = ["error-tracking", "monitoring", "observability", "self-hosted", "sentry"]
categories = ["web-programming", "development-tools"]
readme = "README.md"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
integration-tests = []

[workspace]
members = ["stackpit-auth"]

[dependencies]
stackpit-auth = { path = "stackpit-auth", version = "0.1.0", features = ["axum"] }
anyhow = "1"
async-trait = "0.1"
form_urlencoded = "1"
askama = "0.15"
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
memchr = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "migrate", "macros"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "1"
tower-http = { version = "0.6", features = ["cors", "decompression-gzip", "decompression-zstd", "limit", "normalize-path", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zstd = "0.13"
dashmap = "6"
ipnet = "2"
lru = "0.12"
parking_lot = "0.12"
arc-swap = "1"
simple_hll = "0.0.4"
charts-rs = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
polymail = { version = "0.1", features = ["lettermint", "postmark", "sendgrid"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.10"
# Pin OS-backed entropy explicitly for handles / nonces / CSRF tokens, so a
# future `rand` default-features change can't silently swap in a userspace
# PRNG (the audit / threat model expects every secret to come straight from
# the OS RNG).
getrandom = "0.3"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = "1"
sourcemap = "9"
zip = { version = "8", default-features = false, features = ["deflate"] }
# OAuth/OIDC: openidconnect drives the auth-code + PKCE flow + id_token
# verification. The post-callback session is the BFF token vault in the
# `oidc_grants` table (see src/oidc/) -- no tower-sessions row anywhere.
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
# Back-channel logout: validate the logout_token JWT against Hydra's JWKS.
# openidconnect's id_token_verifier wants nonce + audience-match-client-id,
# both of which the spec forbids on logout tokens -- so we do it ourselves
# with jsonwebtoken. RSA-only (RS256); the JWK conversion in oidc::logout
# tracks Hydra's documented signing algorithm.
jsonwebtoken = { version = "9", default-features = false }
url = "2"

[dev-dependencies]
# loopback http only — no TLS feature needed.
reqwest = { version = "0.12", default-features = false, features = ["cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# reuse the real cookie-hash instead of reimplementing it in the auth test.
stackpit-auth = { path = "stackpit-auth" }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/stackpit", dest = "/usr/bin/stackpit", mode = "755" },
]

[package.metadata.deb]
maintainer = "Franz Geffke <mail@gofranz.com>"
section = "web"
assets = [
    ["target/release/stackpit", "usr/bin/", "755"],
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

# Gated so a bare `cargo test` (CI) skips it; run via `make test-integration`.
[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["integration-tests"]
